--- a/mods/ts/rules/nod-infantry.yaml
+++ b/mods/ts/rules/nod-infantry.yaml
@@ -66,7 +66,7 @@ CYBORG:
 	RevealsShroud:
 		Range: 5c0
 	Armament:
-		Weapon: CyMG #Vulcan3
+		Weapon: CyborgMG #Vulcan3
 		LocalOffset: 240,120,558
 	AttackFrontal:
 		Voice: Attack
