--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -46,11 +46,10 @@ RUTEST:
 	GivesExperience:
 	UpdatesPlayerStatistics:
 		AddToArmyValue: false
-	# Buildable:
-	# 	Queue: Vehicle
-	# 	BuildPaletteOrder: 0
-	# 	Prerequisites: ~none
-	# 	Description: Fast scout vehicle, armed with\nrockets.\n  Strong vs Vehicles\n  Weak vs Infantry, Aircraft
+	Buildable:
+		Queue: Vehicle
+		BuildPaletteOrder: 0
+		Prerequisites: ~none
 	Mobile:
 		TurnSpeed: 44
 		Speed: 100
