攻击时可以以不同角度朝向目标的功能 有炮塔的单位也可以转向目标的功能 3d弹头添加condition支持 大量游戏性修改

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -129,10 +129,12 @@ RUTEST2:
 		# AlwaysTurnInPlace: true
 	# -WithMeshCloth@skirt:
 	# -WithMeshCloth@sweater:
-
 	AttackAttachmentTurreted:
 		Turrets: turret1, turret2
 		Voice: Attack
+		FiringAngle: 512
+		FacingToTarget: true
+		FacingToTargetTolerance: 12
 	WithSkeleton@turret1:
 		SkeletonDefine: turret-test
 		Name: turret_skeleton1
