--- a/mods/ts/rules/gdi-infantry.yaml
+++ b/mods/ts/rules/gdi-infantry.yaml
@@ -22,6 +22,7 @@ E2:
 		Weapon: Grenade
 		LocalOffset: 0,0,454
 		FireDelay: 5
+		UseBindage: true
 	TakeCover:
 		ProneOffset: 160,128,0 #-555
 	AttackFrontal:
@@ -118,6 +119,7 @@ JUMPJET:
 		Range: 6c0
 	Armament:
 		Weapon: JumpCannon
+		UseBindage: true
 	-Crushable:
 	AttackFrontal:
 		Voice: Attack
@@ -245,6 +247,7 @@ GHOST:
 	Armament:
 		Weapon: LtRail
 		LocalOffset: 120,0,313
+		UseBindage: true
 	TakeCover:
 		ProneOffset: 256,32,0 #-384
 	Crushable:
