--- a/mods/ts/rules/civilian-infantry.yaml
+++ b/mods/ts/rules/civilian-infantry.yaml
@@ -116,7 +116,7 @@ MUTANT:
 	Voiced:
 		VoiceSet: Mutant
 	Health:
-		HP: 7500
+		HP: 8500
 	Mobile:
 		Speed: 71
 	RevealsShroud:
@@ -146,20 +146,20 @@ MWMN:
 		BuildPaletteOrder: 0
 		Prerequisites: ~none
 	Valued:
-		Cost: 100
+		Cost: 125
 	Tooltip:
 		Name: Mutant Soldier
 	Voiced:
 		VoiceSet: CivilianFemale
 	Health:
-		HP: 7500
+		HP: 8500
 	Mobile:
-		Speed: 76
+		Speed: 77
 	RevealsShroud:
 		Range: 6c0
 	Armament:
-		LocalOffset: 253,0,478
-		Weapon: ^ShotGun
+		LocalOffset: 262,0,488
+		Weapon: ShardShotGun
 		UseBindage: true
 	AttackFrontal:
 		Voice: Attack
