--- a/mods/ts/rules/nod-vehicles.yaml
+++ b/mods/ts/rules/nod-vehicles.yaml
@@ -29,6 +29,7 @@ BGGY:
 		Weapon: RaiderCannonMG
 		LocalOffset: 0,-61,313, 0,61,313
 		MuzzleSequence: muzzle
+		UseBindage: true
 	AttackFrontal:
 		Voice: Attack
 		PauseOnCondition: empdisable
