--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -124,10 +124,10 @@ TileSets:
 
 MapGrid:
 	TileSize: 48,24
-	EnableDepthBuffer: True
+	EnableDepthBuffer: False
 	Type: RectangularIsometric
 	MaximumTerrainHeight: 16
-	SubCellOffsets: 0,0,0, -362,0,0, 0,362,0, 362,0,0
+	# SubCellOffsets: 0,0,0, -362,0,0, 0,362,0, 362,0,0
 	DefaultSubCell: 2
 
 Cursors:
